--- a/flight_in_cart.html
+++ b/flight_in_cart.html
@@ -63,8 +63,7 @@
     </div> 
        
     <div class="container text-center mt-5">
-        <h4>This is already present in your cart.</h4>
-        <img src="already_in_cart.jpg" class="img-fluid w-40 h-50" alt="..." >
+        <h4>This is already present in your cart/bookings.</h4>
     </div>
         
     <script>
